translate index and knowledge page update training data

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,7 @@
 <!--<![endif]-->
 <head>
     <meta charset="utf-8">
-    <title>能力中心</title>
+    <title>Capability Center</title>
     <meta name="description" content="chinasoft hsbc line capability center">
     <meta name="author" content="capability center">
 
@@ -64,8 +64,8 @@
 
                     <!-- name-and-slogan -->
                     <div class="site-name-and-slogan smooth-scroll">
-                        <div class="site-name"><a href="#banner">能力与创新中心</a></div>
-                        <div class="site-slogan">改善员工的能力和生活</div>
+                        <div class="site-name"><a href="#banner">Capability Center</a></div>
+                        <div class="site-slogan">Make employee's ability and life better</div>
                     </div>
 
                 </div>
@@ -100,19 +100,20 @@
 
                                 <!-- Collect the nav links, forms, and other content for toggling -->
                                 <div class="collapse navbar-collapse scrollspy smooth-scroll" id="navbar-collapse-1">
-                                    <ul class="nav navbar-nav navbar-right">
-                                        <li class="active"><a href="index.html">主页</a></li>
-                                        <li><a href="activity.html">最新活动</a></li>
+                                    <ul style="width: 120%; margin-right: -10%"
+                                        class="nav navbar-nav navbar-right">
+                                        <li class="active"><a href="index.html">Home</a></li>
+                                        <li><a href="activity.html">Latest activities</a></li>
 
-                                        <li><a href="service1.html">服务</a></li>
+                                        <li><a href="service1.html">Service</a></li>
                                         <!-- <li><a href="#portfolio">Portfolio</a></li> -->
 
 
                                         <li><a href="../SpiderNet/service/manage/loginPage.html">P-SN</a></li>
-                                        <li><a href="http://xa.chinasoftosg.com/lms/login.html">技能鉴定</a></li>
+                                        <li><a href="http://xa.chinasoftosg.com/lms/login.html">Skill appraisal</a></li>
 
 
-                                        <li><a href="knowledge.html">知识库</a></li>
+                                        <li><a href="knowledge.html">Knowledge Map</a></li>
                                         <li><a href="../p-vbs/login.html">P-VBS</a></li>
                                     </ul>
                                 </div>
@@ -156,41 +157,41 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 id="about" class="title text-center">能力中心<span>Capability Center</span></h1>
+                    <h1 id="about" class="title text-center"><span>Capability Center</span></h1>
 
                 </div>
             </div>
             <div class="row">
-                <h2>演进路线</h2>
+                <h2>Evolution route</h2>
                 <div class="space"></div>
 
                 <div class="col-md-12">
-                    <img src="images/005.png" alt="">
+                    <img src="images/EvolutionRoute.png" alt="">
                     <div class="space"></div>
                 </div>
             </div>
             <div class="row">
-                <h2>战略解码</h2>
+                <h2>Strategy decoding</h2>
                 <div class="space"></div>
 
                 <div class="col-md-12">
-                    <img src="images/004.png" alt="">
+                    <img src="images/Strategydecoding1.png" alt="">
                     <div class="space"></div>
                 </div>
             </div>
             <div class="space"></div>
             <div class="row">
                 <div class="col-md-12">
-                    <img src="images/002.png" alt="" usemap="#book">
+                    <img src="images/Strategydecoding2.png" alt="" usemap="#book">
                     <map name="book">
-                        <area shape="rect" coords="70,30,150,70" alt="架构能力" href="service4.html">
-                        <area shape="rect" coords="50,90,100,150" alt="管理能力" href="service6.html">
-                        <area shape="rect" coords="0,180,80,220" alt="国际化能力" href="service8.html">
-                        <area shape="rect" coords="50,250,120,310" alt="售前能力" href="service7.html">
-                        <area shape="rect" coords="550,70,630,120" alt="技术能力" href="service1.html">
-                        <area shape="rect" coords="580,150,650,200" alt="业务能力" href="service2.html">
-                        <area shape="rect" coords="570,230,650,250" alt="创新能力" href="service5.html">
-                        <area shape="rect" coords="520,320,600,360" alt="敏捷能力" href="service3.html">
+                        <area shape="rect" coords="70,30,150,70" alt="Architectural capability" href="service4.html">
+                        <area shape="rect" coords="50,90,100,150" alt="Management capability" href="service6.html">
+                        <area shape="rect" coords="0,180,80,220" alt="Internationalization capability" href="service8.html">
+                        <area shape="rect" coords="50,250,120,310" alt="Pre-sales capability" href="service7.html">
+                        <area shape="rect" coords="550,70,630,120" alt="Technical capability" href="service1.html">
+                        <area shape="rect" coords="580,150,650,200" alt="Business capability" href="service2.html">
+                        <area shape="rect" coords="570,230,650,250" alt="Innovation capability" href="service5.html">
+                        <area shape="rect" coords="520,320,600,360" alt="Agile capability" href="service3.html">
                     </map>
 
                     <div class="space"></div>
@@ -202,18 +203,18 @@
                 <div class="space"></div>
 
                 <div class="col-md-12">
-                    <img src="images/0.png" alt="">
+                    <img src="images/RoadMap.png" alt="">
                     <div class="space"></div>
                 </div>
             </div>
-            <div class="col-md-12">
+            <div class="col-md-12" style="font-size: larger">
 
-                <p>第一，刚开始我们不知道有什么，所以我们先要解决我们有什么的问题，先完成基础业务能力和技术能力的沉淀形成知识库；</p>
-                <p>第二，有了基本业务和基本技术的知识库我们才能提供基本培训和训战体系；</p>
-                <p>第三，知识库和训战体系都是为任职服务，所以需要完成基本的任职体系；</p>
-                <p>第四，构建专家和架构师团队，才能沉淀高阶知识库，有了高阶知识库我们才能建立高级别人员的训战体系，从而完善整个任职体系；</p>
-                <p>第五，解决技术问题，就解决了我们基本生存的问题；解决管理问题，就解决了让我们活的更好的问题。提高管理人员的能力，首先要沉淀管理通用技能和工程管理能力以及对应的训战体系，从而建立管理人员任职体系；</p>
-                <p>第六，以上所有的能力都解决了也就形成了组织的售前能力，从而提高公司的核心竞争力。 </p>
+                <p><b style="color: #1571e0;">First</b>, we don't know what we have at the beginning, so we have to solve the question that what we have, the first thing is to complete the knowledge map to precipitate and form the basic business capability and technical capability;</p>
+                <p><b style="color: #1571e0;">Second</b>, we can provide basic training, training system and practice system only if we have the knowledge map about basic business and basic technology;</p>
+                <p><b style="color: #1571e0;">Third</b>, the knowledge map, training system and practice system all serve for qualification system, so we need to complete the basic qualification system;</p>
+                <p><b style="color: #1571e0;">Fourth</b>, the high-level knowledge map can only be precipitated after the expert and architect team has been built. Only after that can we build the high-level staff oriented training system and practice system in order to improve the whole qualification system;</p>
+                <p><b style="color: #1571e0;">Fifth</b>, Once the technical problems are solved, the basic survival problems will be solved. Once the management problems are solved, we will live better. To improve the ability of management staff, the general management skills, engineering management capability and the corresponding training and practice system should be precipitated at first, so as to establish the qualification system for management staff;</p>
+                <p><b style="color: #1571e0;">Sixth</b>, once all the above capabilities have been solved, and the pre-sales capability of organization is formed, and the company's core competitiveness will be improved.</p>
                 <div class="space"></div>
             </div>
         </div>
@@ -342,7 +343,7 @@
 <!-- ================ -->
 <div class="section translucent-bg bg-image-2 pb-clear">
     <div class="container object-non-visible" data-animation-effect="fadeIn">
-        <h1 id="clients" class="title text-center">我们</h1>
+        <h1 id="clients" class="title text-center">About us</h1>
         <div class="space"></div>
         <div class="row">
             <div class="col-md-4">
@@ -351,10 +352,10 @@
                         <img src="images/testimonial-1.png" alt="">
                     </div>
                     <div class="media-body">
-                        <h3 class="media-heading">欢迎来到能力中心!</h3>
+                        <h3 class="media-heading">Welcome to Capability Center!</h3>
                         <blockquote>
-                            <p>能力中心是实现公司战略目标的引擎。</p>
-                            <footer>Raymond，<cite title="Source Title">中软国际汇丰业务线总裁</cite></footer>
+                            <p>Capability Center is the engine to achieve strategic target of company.</p>
+                            <footer>Raymond，<cite title="Source Title">CEO of HSBC business line in ChinaSoft</cite></footer>
                         </blockquote>
                     </div>
                 </div>
@@ -365,10 +366,10 @@
                         <img src="images/testimonial-2.png" alt="">
                     </div>
                     <div class="media-body">
-                        <h3 class="media-heading">能力中心肩负起公司知识沉淀的重任</h3>
+                        <h3 class="media-heading">Capability Center undertake the responsibility of knowledge precipitation</h3>
                         <blockquote>
-                            <p>通过解决方案的包装，使公司能够更好地响应集团的出海战略。</p>
-                            <footer>Aileen-陶爱华， <cite title="Source Title">资深专家</cite></footer>
+                            <p>Solutions packaging enables the company to respond to the group's sailing strategy better.</p>
+                            <footer>Aileen， <cite title="Source Title">Senior expert</cite></footer>
                         </blockquote>
                     </div>
                 </div>
@@ -379,10 +380,10 @@
                         <img src="images/testimonial-3.png" alt="">
                     </div>
                     <div class="media-body">
-                        <h3 class="media-heading">迈向国际化!</h3>
+                        <h3 class="media-heading">Moving towards the internationalization</h3>
                         <blockquote>
-                            <p>加快国际化是贯彻实施集团出海战略的重要前提保障。</p>
-                            <footer>Emma-刘曼，<cite title="Source Title">国际化资深顾问</cite></footer>
+                            <p>Speeding up internationalization is an important prerequisite to implement the group's sailing strategy.</p>
+                            <footer>Emma<cite title="Source Title">Internationalization senior consultant</cite></footer>
                         </blockquote>
                     </div>
                 </div>
@@ -513,7 +514,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <p class="text-center">Copyright &copy; 2017-2017.中软国际 HSBC事业线 能力与创新中心
+                    <p class="text-center">Copyright &copy; 2017-2017.Chinasoft Internationale HSBC Business Line Capability Center
                     </p>
                 </div>
             </div>
@@ -527,7 +528,7 @@
 <script language="javascript" type="text/javascript" src="//js.users.51.la/19148250.js"></script>
 <noscript><a href="//www.51.la/?19148250" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="//img.users.51.la/19148250.asp" style="border:none" /></a></noscript>
 <script language="javascript" type="text/javascript"
-        src="//quote.users.51.la/?id=19148250&amp;mb=网站访问+%24TLV%7Caj%7C10%7Caj%7C%7Caj%7C%7Caj%7C&amp;target=ajiang%5F51la">
+        src="//quote.users.51.la/?id=19148250&amp;mb=Amount of access+%24TLV%7Caj%7C10%7Caj%7C%7Caj%7C%7Caj%7C&amp;target=ajiang%5F51la">
 </script>
 <!--网站流量统计结束-->
 <!-- JavaScript files placed at the end of the document so the pages load faster
